# ProjectMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.md  test-server.sh  test_client.py
docs/: BUILD_REPORT.md  QUICKSTART.md  TOOLS.md  projectbrief.md
scripts/: generate_jwt_token.py  test_client.py
src/mcp_bigquery/: __init__.py  auth.py  bigquery_client.py  config.py  server.py
tests/: conftest.py
